--- a/taller1/sass/style.scss
+++ b/taller1/sass/style.scss
@@ -79,28 +79,39 @@ footer {
 }
 
 #content {
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  padding: 5px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  // width: 100vw;
+  // height: 100vh;
+  padding: 15px;
+  grid-gap: 15px;
 }
-
-.column {
-  padding: 5px;
-  display: flex;
-  flex-flow: column;
-  flex-grow: 1;
-  justify-content: space-between;
-  .element {
+.element {
+  width: 100%;
+  border-radius: $border-radius;
+  img {
     width: 100%;
     border-radius: $border-radius;
-    margin: 5px 0;
-    img {
-      width: 100%;
-      border-radius: $border-radius;
-    }
   }
+
 }
+// .column {
+//   padding: 5px;
+//   display: flex;
+//   flex-flow: column;
+//   flex-grow: 1;
+//   justify-content: space-between;
+//   .element {
+//     width: 100%;
+//     border-radius: $border-radius;
+//     margin: 5px 0;
+//     img {
+//       width: 100%;
+//       border-radius: $border-radius;
+//     }
+//   }
+// }
 @media (min-width: 450px) {
   #fakeHeader {
     position: relative;
