--- a/taller1/styles/style.css
+++ b/taller1/styles/style.css
@@ -57,25 +57,18 @@ footer .btn svg.pinterest path {
 }
 
 #content {
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  padding: 5px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  padding: 15px;
+  grid-gap: 15px;
 }
 
-.column {
-  padding: 5px;
-  display: flex;
-  flex-flow: column;
-  flex-grow: 1;
-  justify-content: space-between;
-}
-.column .element {
+.element {
   width: 100%;
   border-radius: 10px;
-  margin: 5px 0;
 }
-.column .element img {
+.element img {
   width: 100%;
   border-radius: 10px;
 }
